# gmx_speedtest

./: pyproject.toml
gmx_speedtest/: run.py
